# gabb-cli

./: .gitignore  CLAUDE.md  CONTEXT_REDUCTION_PLAN.md  Cargo.toml  HYPOTHESIS_DRIVEN_DEVELOPMENT.md  LICENSE  PROMPT_STRATEGY.md  README.md  RELEASE.md  justfile  version.toml
.claude/: mcp.json
.claude/commands/: ab-test.md  analyze-benchmark.md  gabb.md  release.md
.github/ISSUE_TEMPLATE/: hypothesis.yml
.github/scripts/: update-homebrew.sh  update-scoop.sh
.github/templates/: gabb.json.template  gabb.rb.template
.github/workflows/: ci.yml  release.yml
assets/: CLAUDE_SECTION.md  MCP_INSTRUCTIONS.md  SKILL.md
benchmark/: PROMPT.md  README.md  pyproject.toml  run.py  run_astropy_benchmark.sh  setup.py
benchmark/api/: .env.example  requirements.txt  run.py
benchmark/api/core/: dataset.py
benchmark/claude-code/: BENCHMARKS.md  README.md  RESULTS_ANALYSIS_GUIDE.md  ab_test.py  analyze.py  compare.py  run.py  validate_setup.py  workspace.py
benchmark/claude-code/analysis/: 2026-01-01.md  2026-01-02.md  2026-01-03.md  2026-01-05.md  2026-01-06.md  2026-01-11.md  2026-01-18.md
benchmark/claude-code/configs/control/: settings.json
benchmark/claude-code/configs/gabb/: settings.json
benchmark/claude-code/configs/gabb/skills/gabb/: SKILL.md
benchmark/claude-code/configs/gabb/skills/gabb/tools/: structure.md  usages.md
benchmark/claude-code/hooks/: tool_tracker.py
benchmark/claude-code/tasks/: tasks.json
benchmark/core/: __init__.py  agent.py  dataset.py  env.py  tools.py
benchmark/telemetry/: README.md  pyproject.toml
benchmark/telemetry/gabb_benchmark/: __init__.py  classifier.py  cli.py  estimator.py  parser.py  reporter.py  schemas.py
benchmark/telemetry/gabb_benchmark/rules/: __init__.py  base.py  find_grep.py  grep_to_symbol.py  multi_hop.py  read_to_structure.py
benchmark/telemetry/tests/: __init__.py  conftest.py  test_classifier.py  test_cli.py  test_estimator.py  test_parser.py  test_reporter.py  test_rules.py
benchmark/telemetry/tests/fixtures/: claude_code_native.jsonl  multi_tool_transcript.json  simple_transcript.json
homebrew/: README.md  gabb-cli.rb  update-formula.sh
hypothesis/: HYPOTHESIS_DRIVEN_DEVELOPMENT.md
src/: cli.rs  daemon.rs  indexer.rs  lib.rs  main.rs  mcp.rs  output.rs  rust_lang.rs  store.rs  ts.rs  util.rs  workspace.rs
src/commands/: deps.rs  duplicates.rs  init.rs  install_global.rs  mcp_config.rs  mod.rs  query.rs  setup.rs  stats.rs  structure.rs
src/languages/: cpp.rs  csharp.rs  go.rs  kotlin.rs  mod.rs  python.rs  registry.rs  ruby.rs  rust.rs  traits.rs  typescript.rs
tests/: cli_integration.rs  daemon_smoke.rs  harness_test.rs
tests/fixtures/: cross_file_imports.yaml
tests/support/: cli.rs  file_builders.rs  fixtures.rs  mod.rs  (+2 more)
(+17 files in other folders)
