[package]
name = "gabb-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.5"
once_cell = "1.19"
tree-sitter = "0.25.10"
tree-sitter-typescript = "0.23.2"
