[package]
name = "gabb-cli"
version = "0.5.0"
edition = "2021"
description = "Fast local code indexing CLI for TypeScript, Rust, and Kotlin projects"
license = "MIT"
repository = "https://github.com/gabb-software/gabb-cli"
homepage = "https://github.com/gabb-software/gabb-cli"
readme = "README.md"
keywords = ["code-indexing", "symbols", "typescript", "rust", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gabb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1.5"
csv = "1.3"
ctrlc = "3.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.5"
once_cell = "1.19"
tree-sitter = "0.25.10"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.23.2"
tree-sitter-kotlin-codanna = "0.3.9"

[dev-dependencies]
tempfile = "3.10"
serde_yaml = "0.9"
